# gw-preproc

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: README.md  pipeline_architecture.md  preprocessing.md  project_context.md
notebooks/: data_preprocessing.ipynb  data_preprocessing_v3.ipynb  gating.ipynb
readligo/: __init__.py  io.py  preprocessing.py
