[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readligo"
version = "0.1.0"
description = "LIGO gravitational-wave data I/O and narrowband preprocessing"
requires-python = ">=3.10"
dependencies = [
    "h5py",
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["readligo*"]
