[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readligo"
version = "0.1.0"
description = "LIGO gravitational-wave data I/O and narrowband preprocessing"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.16.0",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["readligo*"]
