[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readligo"
version = "0.1.0"
description = "LIGO gravitational-wave data I/O and narrowband preprocessing"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "astroboy07", email = "saif10888@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["LIGO", "gravitational-waves", "GW", "GWOSC", "signal-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = [
    "h5py>=3.16.0",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
    "pycbc>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["readligo*"]
